2005-01-08  Sven Neumann  <sven@gimp.org>

	* app/dialogs/scale-dialog.c: use a GimpMessageBox to display the
	informative message when scaling an indexed image.

2005-01-07  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontainertreeview.c
	(gimp_container_tree_view_button_press): handle RTL layouts (fixes
	bug #162663).

2005-01-07  Shlomi Fish  <shlomif@iglu.org.il>

	* plug-ins/script-fu/scripts/frosty-logo.scm: made sure the shadow
	is given enough space and then truncated instead of translated to
	the center of the image, thus preventing the display of shadows
	with a completely horizontal or vertical edge.

	Fixes bug #132145.

2005-01-07  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-snap.c: moved variables to local scopes,
	assign the snapped coords unconditionally (also if we don't snap),
	cleanup.

	(gimp_image_snap_rectangle): entirely rewritten to use local
	mindist_x, mindist_y variables instead of fiddling with lots of
	boolean variables. Implemented vectors snapping as if the required
	GimpStroke functions existed (#defined them). Simon, your turn :)

2005-01-07  Michael Natterer  <mitch@gimp.org>

	* app/actions/plug-in-commands.c
	* app/actions/vectors-commands.c: GIMP_PROGRESS(NULL) is perfectly
	valid, no need to say gdisp ? GIMP_PROGRESS(gdisp) : NULL.

	* app/actions/plug-in-commands.c (plug_in_run_cmd_callback):
	remember the last plug-in if it has at least 3 args, not 2.
	Cleaned up the whole function and removed cruft.

2005-01-07  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-x86.h
	* app/composite/gimp-composite-sse.c: applied patch from Andreas
	Jochens that fixes the build on amd64 with gcc-4.0 (bug #163041).

2005-01-07  Sven Neumann  <sven@gimp.org>

	* data/misc/gimp.desktop.in.in: changed Comment field as suggested
	in bug #160990.

2005-01-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mail.c: just some minor formatting changes.

2005-01-07  Sven Neumann  <sven@gimp.org>
