@@ -1,5 +1,11 @@
 2005-01-08  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimpcontainertreeview.c
+	(gimp_container_tree_view_button_press): fixed handling of clicks
+	into a horizontally scrolled treeview.
+
+2005-01-08  Sven Neumann  <sven@gimp.org>
+
 	* app/dialogs/scale-dialog.c: use a GimpMessageBox to display the
 	informative message when scaling an indexed image.
 
